[package]
name = "dummy-project"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dummy-binary"
path = ".konflux/main.rs"

[dependencies]
fancy-regex = "0.13.0"
regex = "1.10.3"
rustc-hash = "2"
bstr = "1.5.0"
hashbrown = "0.12.3"
lazy_static = "1.4.0"
pyo3 = { version = "0.17.1", features = ["extension-module", "abi3-py37"] }

[dev-dependencies]
rstest = "0.15.0"